# doingmath

./: LICENSE  Makefile  README.md  finding-primes.ipynb  finding-primes.py  meson.build  primes-bokeh.ipynb  primes-bokeh.py  pyproject.toml
GeometricLinearAlgebra/: 01_Linearity_Lines_to_Lines.py  02_Coordinate_Free_Operators.py  03_Dot_and_Wedge.py  04_Volume_Determinant_Trace.py  05_Bases_Coordinates_Complex.py  README.md
Geometry/: 2dplane.ipynb  2dplane.py
LieGroups/: Lorentz_Lie_Theory.ipynb  Lorentz_Lie_Theory.py  README.md  SE2_Lie_Theory.ipynb  SE2_Lie_Theory.py  SE3_Lie_Theory.ipynb  SE3_Lie_Theory.py  SIM2_Lie_Theory.ipynb  SIM2_Lie_Theory.py  SO2_Lie_Theory.ipynb  SO2_Lie_Theory.py  SO3_Lie_Theory.ipynb  SO3_Lie_Theory.py  VectorField_View_Lie_Theory.ipynb  VectorField_View_Lie_Theory.py
