[project]
name = "doingmath"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bokeh>=3.9.1",
    "clifford>=1.5.1",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "jupytext>=1.19.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
]
