[project]
name = "doingmath"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "clifford>=1.5.1",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "jupytext>=1.19.1",
    "k3d>=2.17.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "meson>=1.11.1",
]
